pr comment suggestions